2009-12-15 04:29-WIT Hans Baier <hansfbaier@googlemail.com>
	* PBPbxMakefileGenerator.m: fix crash bug: double release

2009-12-01 17:55-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBPbxNativeTarget.m: Replace @try/@catch with NS_DURING
	and NS_HANDLER/ENDHANDLER

2009-11-20 Hans Baier <hansfbaier@goolemail.com>
	* applied Joe Matiellos patch after some style cleanup

2009-09-02 Riccardo Mottola <rmottola@users.sf.net>
	* PBPbxNativeTarget.[hm]: added snow leopard pbx constant

2009-08-16 09:36-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBPbxNativeTarget.m: Change to allow compilation of dynamic libs.

2009-03-09 14:55-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.m: Correct issue with building target.
	* PBProjectGenerator.m: Temporarily remove code which generates the
	PC.project contents.

2009-03-06 22:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Correct C++ compilation issue.
	* PBPbxNativeTarget.m: Allow adding multiple times to the
	source arrays.

2009-03-02 02:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Move include for common.make.

2009-02-28 00:46-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Create scripts in scripts directory under
	pbxbuild so that they can be executed from there.
	* PBPbxNativeTarget.m: Change to dictionary.
	* PBProjectGenerator.m: Cleanup.

2009-02-27 10:32-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: add scripts to before-all::
	* PBPbxNativeTarget.[hm]: Changes to store script information.

2009-02-26 23:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Cleanup
	* PBMakefileGenerator.m: Add return files.
	* PBPbxNativeTarget.m: Fixes for static libraries.

2009-02-24 16:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Compile all static if one project is a static lib. 